[metadata]
name = pyult
version = attr:pyult.__version__
author = Motoki Saito
author_email = motoki.saito@uni-tuebingen.de
description__ = Preprocessing ultrasound images from AAA in Python.
long_description = file:README.md
url = https://github.com/msaito8623/pyult
license__ = To be updated
classifiers = [
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering'
    ]


[options]
zip_safe = False
packages = find:
include_package_data = True
